cleanup before moving to github

--- a/app/index.html
+++ b/app/index.html
@@ -46,8 +46,9 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
+    <script src="scripts/main.js"></script>
     <script src="scripts/fields/field-datepicker.js"></script>
+    <script src="scripts/utils/icon.js"></script>
     <!-- endbuild -->
 
 </apex:page>
