Updating datepicker and unit tests to be a bit more stable and rendered properly in most situations

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
         <div class="slds-form-element__control">
             <div class="slds-input-has-icon slds-input-has-icon--right">
                 <!-- <span smb-icon type="utility" icon="event" size="x-small"></span> -->
-                <input class="slds-input" type="text" placeholder="Pick a Date" label="Date Picker Label" ng-model='datefield' ng-required='datefield.required' li-datepicker ng-focus="isOpen = true" ng-disabled="datefield.disabled || $parent.$parent.section.state.status === 'pending'"/>
+                <input class="slds-input" type="text" placeholder="Pick a Date" label="Date Picker Label" ng-model='dc.datefield' ng-required='dc.datefield.required' li-datepicker ng-disabled="dc.datefield.disabled || $parent.$parent.section.state.status === 'pending'"/>
             </div>
         </div>
 
