add tabs functionality and include demo in index

--- a/app/index.html
+++ b/app/index.html
@@ -145,8 +145,22 @@
 
         </section>
 
-    </div>
+        <section>
 
+            <h2 class="slds-p-top--xx-large site-text-heading--large site-text-heading--callout site-jump-anchor__container" type="h2">
+                <span id="base" class="site-jump-anchor" ></span>
+                <span>Tabs</span>
+                <span class="slds-badge slds-m-left--medium slds-shrink-none slds-align-middle">Beta</span>
+            </h2>
+            
+            <li-tabset>
+                <li-tab heading="Tab 1">First Tab!</li-tab>
+                <li-tab heading="Tab 2">The Second Tab!</li-tab>
+            </li-tabset>
+
+        </section>
+
+    </div>
 
     </body>
 
@@ -170,6 +184,7 @@
     <script src="scripts/utils/icon.js"></script>
     <script src="scripts/utils/modal.js"></script>
     <script src="scripts/utils/tooltip.js"></script>
+    <script src="scripts/utils/tabs.js"></script>
     <!-- endbuild -->
 
     <!-- include the demo script outside of the usemin block (we dont want it included in the dist code) -->
