make rich text model go both ways

--- a/app/index.html
+++ b/app/index.html
@@ -167,7 +167,7 @@
             </h2>
             
             <div li-wysiwyg ng-model="dc.textfield" wysiwyg-id="someUniqueId"></div>
-            Model Value: {{dc.textfield}}
+            Model Value: <input type="text" ng-model="dc.textfield">
         </section>
     </div>
 
