add manual tab activation on load

--- a/app/index.html
+++ b/app/index.html
@@ -154,8 +154,8 @@
             </h2>
             
             <li-tabset>
-                <li-tab heading="Tab 1">First Tab!</li-tab>
-                <li-tab heading="Tab 2">The Second Tab!</li-tab>
+                <li-tab heading="Tab 1">First tab!</li-tab>
+                <li-tab heading="Tab 2" active-first="true">The second tab is set to activate first!</li-tab>
             </li-tabset>
         </section>
 
