--- a/app/index.html
+++ b/app/index.html
@@ -178,7 +178,8 @@
             </h2>
             
             <input type="text" ng-model="dc.informMessage" />
-            <button ng-click="dc.sendInform(dc.informMessage)">Send message</button>
+            <button ng-click="dc.sendInform(dc.informMessage)">Send Alert</button>
+            <button ng-click="dc.sendInform(dc.informMessage, 'danger')">Send Error</button>
             <div inform></div>
         </section>
     </div>
@@ -212,7 +213,7 @@
     <!--Overriding inform's template!-->
     <script id="angular-inform/directive.ng.html" type="text/ng-template">
     <div class="slds-notify-container">
-      <div class="slds-notify slds-notify--alert slds-theme--alert-texture" role="alert" ng-repeat="msg in messages | orderBy:'-tickCount'" ng-mouseenter="cancelTimeout(msg)" ng-mouseleave="setTimeout(msg)">
+      <div class="slds-notify slds-notify--alert slds-theme--alert-texture" ng-class="{'slds-theme--error' : msg.type == 'danger'}" role="alert" ng-repeat="msg in messages | orderBy:'-tickCount'" ng-mouseenter="cancelTimeout(msg)" ng-mouseleave="setTimeout(msg)">
             <button class="slds-button slds-button--icon-inverse slds-notify__close" ng-click="remove(msg)">
                 <span li-icon type="action" icon="close" size="small"></span>
             </button>
