added boilerplate example layout

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 
     <body ng-app="angular-lightning-demo" ng-controller="DemoController as dc">
      
+    <div ng-include="'views/demo/header.html'"></div>
 
     <header class="site-masthead slds-grid">
         <div class="site-masthead-title slds-col slds-has-flexi-truncate slds-align-middle">
@@ -39,9 +40,6 @@
                     <p>AngularJS Directives for Salesforce Lightning Design System</p>
                 </div>
             </div>
-        </div>
-        <div class="slds-col">
-            <a href="https://github.com/mbowen000/angular-lightning" class="slds-float--right">Github Project</a>
         </div>
     </header>
 
