updating some boilerplate and making ajustment to handle null values on picklist

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,3 @@
-<!doctype="html">
 <html lang="en">
         
     <head>
@@ -141,6 +140,8 @@
                 </h2>
 
                 <span li-icon type="utility" icon="warning" size="x-small" color="warning"></span>
+
+                <span li-icon type="standard" icon="account" add-classes="slds-icon-standard-account"></span>
 
                 <h2 class="site-text-heading--small site-text-heading--callout">Inside Input</h2>
 
