--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
                 <div class="slds-form-element__control">
                     <div class="slds-input-has-icon slds-input-has-icon--right">
                         <span li-icon type="utility" icon="event" size="x-small" add-classes="slds-input__icon"></span>
-                        <input class="slds-input" type="text" placeholder="Pick a Date" label="Date Picker Label" ng-model='dc.datefield' ng-required='dc.datefield.required' li-datepicker ng-disabled="dc.datefield.disabled || $parent.$parent.section.state.status === 'pending'"/>
+                        <input class="slds-input" type="text" placeholder="Pick a Date" label="Date Picker Label" ng-model='dc.datefield' ng-required='dc.datefield.required' li-datepicker datepicker-type="datetime" ng-disabled="dc.datefield.disabled" />
                     </div>
                 </div>
 
