getting unit tests up and running again, fixed some issues with rendering on the date picker and got specs up to date.

--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,8 @@
                     </div>
                 </div>
 
+                <button class="slds-button" ng-click="dc.datefield = null">Clear Date</button>
+
                 <p><h3>Date Picker Example Code</h3></p>
 
                 <script src="https://gist.github.com/mbowen000/d6508ea04228901dc557.js"></script>
