Additional fix, made sure parsing is correct

--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,8 @@
 
                 <div class="slds-form-element__control" li-picklist options="dc.picklistfield.picklistvals" ng-model="dc.picklistfield.value"></div>
 
+
+                <p>Model: {{dc.picklistfield.value}}</p>
                 <p><h3>Picklist Example Code</h3></p>
                 <script src="https://gist.github.com/mbowen000/cfe32261dfe19d45fc55.js"></script>
 
